crates/tui/src/ui/messages_lens/snapshots/mxr_tui__ui__messages_lens__tests__messages_lens_clear_120.snap
---
source: crates/tui/src/ui/messages_lens/tests.rs
expression: rendered
---
"╭ Messages ─ People you talk with, one row each╮╭ Maya Ortiz ──────────────────────────────────────────────────────────╮"
"│ Nobody is waiting on you.                    ││ Loading…                                                             │"
"│   Ari usually writes every week. Last: 19    ││                                                                      │"
"│   days ago.                                  ││                                                                      │"
"│                                              ││                                                                      │"
"│ PINNED                                       ││                                                                      │"
"│▌Maya Ortiz                            15:00  ││                                                                      │"
"│                                              ││                                                                      │"
"│ RECENT                                       ││                                                                      │"
"│ Iris Chen                         Yesterday  ││                                                                      │"
"│   You: Thanks, on it.                        ││                                                                      │"
"│                                              ││                                                                      │"
"│ QUIET (12)                                >  ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯"
" Here because: Maya Ortiz replied to your message, and you write to each other often (rule).                            "
" r reply  . got it  e done here  t make it a to-do  b reply later  c new topic  [ ] topic  ? help                       "
