crates/tui/src/ui/messages_lens/snapshots/mxr_tui__ui__messages_lens__tests__messages_lens_first_card_120.snap
---
source: crates/tui/src/ui/messages_lens/tests.rs
expression: rendered
---
"╭ Messages ─ People you talk with, one row each╮╭ Samir Patel · close · usually 47m ───────────────────────────────────╮"
"│ │ Each row is a person, not an email, with   ││ You've written 48 times since 2023. Last: Tuesday.                   │"
"│ │ your conversations inside as topics. The   ││──────────────────────────────────────────────────────────────────────│"
"│ │ quoted line is what they asked; the row    ││ Topics: [Contract renewal *] · Launch checklist · with Ruth: Pricing │"
"│ │ leaves Your turn when you reply or press   ││ copy                                                                 │"
"│ │ got it (.).                                ││──────────────────────────────────────────────────────────────────────│"
"│ │ r reply · . got it · e done here · t make  ││                                                      You · Wed 23:00 │"
"│ │ it a to-do · Esc close                     ││                                            Here's the renewal draft. │"
"│                                              ││                                                                      │"
"│                                              ││ Samir Patel · Yesterday 23:00                                        │"
"│ YOUR TURN                                    ││ Thanks for sending the renewal draft over. Most of it is fine as     │"
"│▌Samir Patel                             16h *││ written.                                                             │"
"│   “Can you take a look and reply with the n… ││                                                                      │"
"│ Jon Bell                                 8h *││ »Can you take a look and reply with the next concrete step?«         │"
"│   Does the pricing copy read right to you?   ││ [+1 paragraph] (trimmed: quote, sig, o as sent)                      │"
"│                                              ││                                                                      │"
"│ PINNED                                       ││                                                                      │"
"│ Maya Ortiz                            15:00  ││                                                                      │"
"│                                              ││                                                                      │"
"│ RECENT                                       ││                                                                      │"
"│ Iris Chen                         Yesterday  ││                                                                      │"
"│   You: Thanks, on it.                        ││                                                                      │"
"│                                              ││                                                                      │"
"│ QUIET (12)                                >  ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││ > Reply to Samir · Contract renewal                                  │"
"╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯"
" Here because: Samir Patel replied to your message, and you write to each other often (rule).                           "
" r reply  . got it  e done here  t make it a to-do  b reply later  c new topic  [ ] topic  ? help                       "
