crates/tui/src/ui/messages_lens/snapshots/mxr_tui__ui__messages_lens__tests__messages_lens_first_card_80.snap
---
source: crates/tui/src/ui/messages_lens/tests.rs
expression: rendered
---
"╭ Messages ─ People you talk with, one row each. Reply or mark done. ──────────╮"
"│ │ Each row is a person, not an email, with your conversations inside as      │"
"│ │ topics. The quoted line is what they asked; the row leaves Your turn when  │"
"│ │ you reply or press `.` for got it.                                         │"
"│ │ r reply · . got it · e done here · t make it a to-do · Esc close           │"
"│                                                                              │"
"│                                                                              │"
"│ YOUR TURN                                                                    │"
"│▌Samir Patel                                                             16h *│"
"│   “Can you take a look and reply with the next concrete step?”               │"
"│ Jon Bell                                                                 8h *│"
"│   Does the pricing copy read right to you?                                   │"
"│                                                                              │"
"│ PINNED                                                                       │"
"│ Maya Ortiz                                                            15:00  │"
"│                                                                              │"
"│ RECENT                                                                       │"
"│ Iris Chen                                                         Yesterday  │"
"│   You: Thanks, on it.                                                        │"
"│                                                                              │"
"│ QUIET (12)                                                                >  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
" Here because: Samir Patel replied to your message, and you write to each other…"
" r reply  . got it  e done here  t make it a to-do  b reply later  c new topic… "
