crates/tui/src/ui/messages_lens/snapshots/mxr_tui__ui__messages_lens__tests__messages_lens_person_60.snap
---
source: crates/tui/src/ui/messages_lens/tests.rs
expression: rendered
---
"╭ Samir Patel · close · usually 47m ───────────────────────╮"
"│ You've written 48 times since 2023. Last: Tuesday.       │"
"│──────────────────────────────────────────────────────────│"
"│ Topics: [Contract renewal *] · Launch checklist · with   │"
"│ Ruth: Pricing copy                                       │"
"│──────────────────────────────────────────────────────────│"
"│                                          You · Wed 23:00 │"
"│                                Here's the renewal draft. │"
"│                                                          │"
"│ Samir Patel · Yesterday 23:00                            │"
"│ Thanks for sending the renewal draft over. Most of it is │"
"│ fine as written.                                         │"
"│                                                          │"
"│ »Can you take a look and reply with the next concrete    │"
"│ step?«                                                   │"
"│ [+1 paragraph] (trimmed: quote, sig, o as sent)          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│ > Reply to Samir · Contract renewal                      │"
"╰──────────────────────────────────────────────────────────╯"
" Here because: Samir Patel replied to your message, and you…"
" r reply  . got it  e done here  t make it a to-do  b repl… "
