crates/tui/src/ui/messages_lens/snapshots/mxr_tui__ui__messages_lens__tests__messages_lens_populated_120.snap
---
source: crates/tui/src/ui/messages_lens/tests.rs
expression: rendered
---
"╭ Messages ─ People you talk with, one row each╮╭ Samir Patel · close · usually 47m ───────────────────────────────────╮"
"│ YOUR TURN                                    ││ You've written 48 times since 2023. Last: Tuesday.                   │"
"│▌Samir Patel                             16h *││──────────────────────────────────────────────────────────────────────│"
"│   “Can you take a look and reply with the n… ││ Topics: [Contract renewal *] · Launch checklist · with Ruth: Pricing │"
"│ Jon Bell                                 8h *││ copy                                                                 │"
"│   Does the pricing copy read right to you?   ││──────────────────────────────────────────────────────────────────────│"
"│                                              ││                                                      You · Wed 23:00 │"
"│ PINNED                                       ││                                            Here's the renewal draft. │"
"│ Maya Ortiz                            15:00  ││                                                                      │"
"│                                              ││ Samir Patel · Yesterday 23:00                                        │"
"│ RECENT                                       ││ Thanks for sending the renewal draft over. Most of it is fine as     │"
"│ Iris Chen                         Yesterday  ││ written.                                                             │"
"│   You: Thanks, on it.                        ││                                                                      │"
"│                                              ││ »Can you take a look and reply with the next concrete step?«         │"
"│ QUIET (12)                                >  ││ [+1 paragraph] (trimmed: quote, sig, o as sent)                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││                                                                      │"
"│                                              ││ > Reply to Samir · Contract renewal                                  │"
"╰──────────────────────────────────────────────╯╰──────────────────────────────────────────────────────────────────────╯"
" Here because: Samir Patel replied to your message, and you write to each other often (rule).                           "
" r reply  . got it  e done here  t make it a to-do  b reply later  c new topic  [ ] topic  ? help                       "
